Force rebuild: Portfolio with full landing animation and all content sections live

--- a/sasti-portfolio/index.html
+++ b/sasti-portfolio/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Mechatronics, Robotics, Automation, AI, Engineering, Computer Vision, PLC">
     <meta name="author" content="Sasti Ramanathan A">
     <title>Sasti Ramanathan A — Mechatronics Engineer | Robotics & Automation</title>
+    <!-- Version: 2.0 - Full Portfolio with Landing Animation -->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
